--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>hw01</module>
         <module>hw02</module>
         <module>hw03</module>
+        <module>hw04</module>
     </modules>
 
     <properties>
@@ -21,6 +22,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <spring-boot-dependencies.version>2.7.0</spring-boot-dependencies.version>
+        <spring-shell-starter.version>2.0.1.RELEASE</spring-shell-starter.version>
     </properties>
 
     <dependencyManagement>
