--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>hw02</module>
         <module>hw03</module>
         <module>hw04</module>
+        <module>hw05</module>
     </modules>
 
     <properties>
@@ -23,11 +24,22 @@
 
         <spring-boot-dependencies.version>2.7.0</spring-boot-dependencies.version>
         <spring-shell-starter.version>2.0.1.RELEASE</spring-shell-starter.version>
+        <commons-collections4.version>4.4</commons-collections4.version>
         <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.shell</groupId>
+                <artifactId>spring-shell-starter</artifactId>
+                <version>${spring-shell-starter.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
+                <version>${commons-collections4.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
