[hw-06] - removed transactionManager and added findCommentsByBookId method

--- a/hw06/src/main/resources/application.yml
+++ b/hw06/src/main/resources/application.yml
@@ -7,7 +7,11 @@ spring:
     allow-circular-references: true
 logging:
   level:
+    #root: DEBUG
     org:
+      springframework:
+        transaction:
+          interceptor: TRACE
       hibernate:
         type:
           descriptor:
